# Real-Time-Lip-Sync

./: .dockerignore  .gitignore  Dockerfile  README.md  cookbook.ipynb  deploy.sh  main.py  pyproject.toml  requirements.txt  test.py  ui.py
app/: config.py  main.py  model.py  museasr.py  musereal.py  realtime_inference.py  webrtc.py  worker.py
configs/inference/: realtime.yaml  test.yaml
rtlipsync/inference/: inference.py  realtime_inference.py
rtlipsync/utils/: __init__.py  blending.py  preprocessing.py  utils.py
rtlipsync/utils/dwpose/: rtmpose-l_8xb32-270e_coco-ubody-wholebody-384x288.py
rtlipsync/utils/face_detection/: __init__.py  models.py  utils.py
rtlipsync/utils/face_detection/detection/: core.py
rtlipsync/utils/face_detection/detection/sfd/: bbox.py  detect.py  sfd_detector.py
rtlipsync/utils/face_parsing/: __init__.py  model.py  resnet.py
rtlipsync/whisper/: audio2feature.py
rtlipsync/whisper/whisper/: __init__.py  audio.py  decoding.py  model.py  tokenizer.py  transcribe.py  utils.py
scripts/: download_models.py
static/: client.js  webrtc.html
templates/: index.html
web/: webrtcapi.html
